fix(esl-share): extra paddings below buttons (change to display: flex)

--- a/src/modules/esl-share/core/esl-share-list.less
+++ b/src/modules/esl-share/core/esl-share-list.less
@@ -1,3 +1,3 @@
 esl-share-list {
-  display: block;
+  display: flex;
 }
